--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -89,6 +89,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/conductivityplot.js"></script>
+        <script src="scripts/directives/phplot.js"></script>
+        <script src="scripts/directives/potentialplot.js"></script>
         <!-- endbuild -->
 </body>
 </html>
