Adicionar top menu e left menu

--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/directives/conductivityplot.js"></script>
         <script src="scripts/directives/phplot.js"></script>
         <script src="scripts/directives/potentialplot.js"></script>
+        <script src="scripts/directives/inlinefield.js"></script>
         <!-- endbuild -->
 </body>
 </html>
