--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/directives/potentialplot.js"></script>
         <script src="scripts/directives/inlinefield.js"></script>
         <script src="scripts/controllers/graph.js"></script>
+        <script src="scripts/controllers/interface.js"></script>
         <!-- endbuild -->
 </body>
 </html>
